--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ermukhanov M</title>
+
 <link rel="icon" type="image/jpeg" href="favicon.jpg">
 <link rel="apple-touch-icon" href="favicon.jpg">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,9 +25,8 @@ body {
 /* HERO */
 .hero {
     width: 100%;
-    height: auto;
-    min-height: 60vh;
-    background: url('iconca.jpg') center top / contain no-repeat;
+    min-height: 70vh;
+    background: url('iconca.jpg') center / cover no-repeat;
     background-color: #000;
     position: relative;
 }
@@ -37,11 +37,10 @@ body {
     inset: 0;
     background: linear-gradient(
         to bottom,
-        rgba(0,0,0,0.05),
-        rgba(0,0,0,0.35)
+        rgba(0,0,0,0.1),
+        rgba(0,0,0,0.45)
     );
 }
-
 
 .hero-text {
     position: absolute;
@@ -60,28 +59,28 @@ body {
 .hero-text p {
     font-size: 14px;
     opacity: 0.9;
-    margin-top: 5px;
+    margin-top: 6px;
 }
 
 /* CONTENT */
 .content {
     max-width: 420px;
     margin: auto;
-    padding: 30px 20px 60px;
+    padding: 30px 20px 40px;
 }
 
 .section {
-    margin-bottom: 35px;
+    margin-bottom: 36px;
 }
 
 .section h2 {
-    font-size: 18px;
-    margin-bottom: 12px;
+    font-size: 19px;
+    margin-bottom: 14px;
 }
 
 .section p {
     font-size: 15px;
-    line-height: 1.6;
+    line-height: 1.7;
     color: #333;
 }
 
@@ -93,7 +92,7 @@ body {
 }
 
 .tag {
-    padding: 6px 12px;
+    padding: 7px 14px;
     background: #111;
     color: #fff;
     border-radius: 20px;
@@ -104,7 +103,7 @@ body {
 .socials {
     display: flex;
     gap: 16px;
-    margin-top: 10px;
+    margin-top: 14px;
 }
 
 .socials a {
@@ -116,11 +115,11 @@ body {
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    transition: 0.3s;
+    transition: transform 0.25s ease;
 }
 
 .socials a:hover {
-    transform: scale(1.08);
+    transform: scale(1.1);
 }
 
 .socials img {
@@ -129,20 +128,73 @@ body {
 }
 
 /* FOOTER */
-footer {
-    text-align: center;
-    font-size: 13px;
-    color: #666;
-    padding-bottom: 25px;
+.footer {
+    padding: 30px 20px 40px;
 }
 
-/* DESKTOP (чуть шире, но мобайл в приоритете) */
+.footer-box {
+    max-width: 420px;
+    margin: auto;
+    background: #111;
+    color: #fff;
+    border-radius: 18px;
+    padding: 24px 20px;
+    text-align: center;
+}
+
+.footer-name {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.footer-meta {
+    font-size: 13px;
+    opacity: 0.7;
+    margin-top: 6px;
+}
+
+.footer-socials {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    margin: 18px 0;
+}
+
+.footer-socials a {
+    font-size: 14px;
+    color: #fff;
+    text-decoration: none;
+    opacity: 0.85;
+}
+
+.footer-socials a:hover {
+    opacity: 1;
+    text-decoration: underline;
+}
+
+.footer-copy {
+    font-size: 12px;
+    opacity: 0.6;
+}
+
+/* DESKTOP */
 @media (min-width: 900px) {
-    .content {
+    .content,
+    .footer-box {
         max-width: 700px;
     }
+
     .hero {
-        height: 60vh;
+        min-height: 60vh;
+        background-size: contain;
+    }
+
+    .hero-text h1 {
+        font-size: 36px;
+    }
+
+    .hero-text p {
+        font-size: 16px;
     }
 }
 </style>
@@ -201,10 +253,22 @@ footer {
 
 </div>
 
-<footer>
-    15 years • KZ • Aqtobe  
-    <br>
-    Made by young Zuckerberg
+<!-- FOOTER -->
+<footer class="footer">
+    <div class="footer-box">
+        <div class="footer-name">Ermukhanov M</div>
+        <div class="footer-meta">15 years • KZ • Aqtobe</div>
+
+        <div class="footer-socials">
+            <a href="https://github.com/Ermukhanov" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/ermukhanov-m-86000a39b" target="_blank">LinkedIn</a>
+            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+        </div>
+
+        <div class="footer-copy">
+            Made by young Zuckerberg 😄
+        </div>
+    </div>
 </footer>
 
 </body>
